--- a/index.html
+++ b/index.html
@@ -4,10 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <script src="https://kit.fontawesome.com/6b1f2b3d6e.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Salsa&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="/images/pepper.ico" />
+    <style>
+      body {
+        font-family: "Salsa", cursive;
+      }
+      .div_class_that_acts_like_an_li {
+        font-size: 4rem;
+      }
+    </style>
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <header>
+      <nav>
+        <ol>
+          <li><a class="nav-link" href="index.html">Home</a></li>
+          <li><a class="nav-link" href="about.html">About</a></li>
+          <div
+            class="div_that_acts_like_an_li"
+            style="color:white; font-size: 3rem;"
+          >
+            <i class="fas fa-pepper-hot"></i> Deep Salsa
+            <i class="fas fa-pepper-hot"></i>
+          </div>
+          <li><a class="nav-link" href="menu.html">Menu</a></li>
+          <li><a class="nav-link" href="form.html">Order Form</a></li>
+        </ol>
+      </nav>
+    </header>
+    <main>
+      <div><img class="big_image" src="/images/salsa6.webp" alt="" /></div>
+      <section class="container_of_images">
+        <div>
+          <a href="about.html"
+            ><img class="little_images" src="/images/salsa3.jpg" alt=""
+          /></a>
+        </div>
+        <div>
+          <a href="menu.html"
+            ><img class="little_images" src="/images/salsa2.jpg" alt=""
+          /></a>
+        </div>
+        <div>
+          <p class="little_images_cursed">
+            <a href="http://vidasalsera.com/wp/7-salsa-clubs/"
+              ><i class="fas fa-walking"> </i> Salsa Dancing Every Friday Night
+              <i class="fas fa-walking"> </i
+            ></a>
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer>Design By Patton Burge</footer>
   </body>
 </html>
