--- a/about.html
+++ b/about.html
@@ -36,12 +36,11 @@
       }
       h2{
         font-family:  "Salsa", cursive;
-        border: black solid 1px;
         padding: 20px;
         background-color: rgba(191, 49, 0, 1);
-        border-radius: 20%;
-        width: 5rem;
-        margin-left: 20%;
+        border-radius: 30px;
+        width: 4rem;
+
       }
     </style>
     <title>Document</title>
