--- a/menu.html
+++ b/menu.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <script src="https://kit.fontawesome.com/6b1f2b3d6e.js"></script>
     <link
       href="https://fonts.googleapis.com/css?family=Salsa&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="/images/pepper.ico" />
+    <link rel="icon" href="images/pepper.ico" />
     <style>
       body {
         font-family: "Salsa", cursive;
